# Cuda_Rust_Deep_Learning

./: Cargo.toml  README.md  build.rs  compile_flags.txt
src/: main.rs  matmul.rs  matmul_tc.rs
src/kernels/: matmul.cu  matmul_tc.cu  vector_add.cu
