[package]
name = "Cuda_Rust_Deep_Learning"
version = "0.1.0"
edition = "2021"

[dependencies]
# The bridge between Rust and CUDA
cudarc = { version = "0.13", features = ["cuda-version-from-build-system"] }

[build-dependencies]
# A handy crate to help us invoke nvcc smoothly during cargo build
cc = { version = "1.0", features = ["parallel"] }
